--- a/tuidoc.config.json
+++ b/tuidoc.config.json
@@ -31,24 +31,9 @@
   "examples": {
     "filePath": "examples",
     "titles": {
-      "example00-basic": "Calendar App",
-      "example01-monthly": "Monthly",
-      "example02-weekly": "Weekly",
-      "example03-daily": "Daily",
-      "example04-2-weeks": "2 Weeks",
-      "example05-3-weeks": "3 Weeks",
-      "example06-narrow-weekends": "Narrower Weekends",
-      "example07-hide-weekends": "Hide Weekends",
-      "example08-task-n-schedule": "Task & Schedule",
-      "example09-task-only": "Task Only",
-      "example10-common-theme": "Common Theme",
-      "example11-monthly-theme": "Monthly Theme",
-      "example12-weekly-theme": "Weekly Theme",
-      "example13-timezone": "Timezone",
-      "example14-template-for-month": "Template for Month",
-      "example15-template-for-timegrid": "Template for Week, Day",
-      "example16-template-for-popup": "Template for Popup"
+      "test": "Calendar App"
     },
+
     "globalErrorLogVariable": "errorLogs"
   },
   "pathPrefix": "tui.calendar"
